Switch to Java-11